fix alignments

--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -1,19 +1,28 @@
 header{
     width: 100%;
     background: linear-gradient(135deg, rgba(2,0,36,1) 0%, rgba(146,146,255,1) 31%, rgba(0,212,255,1) 100%);
-    padding: 5% 39%;
 
+    .content {
+        width: 350px;
+        margin: 0 auto;
+        padding: 10% 0;
+        text-align: center;
+    }
     nav {
         width: 100%;
         background: rgba($color: #000000, $alpha: 0.65);
         color: rgba($color: #FFF, $alpha: 1.0);
-        ul {
-            list-style: none;
+        margin: 5% 0;
+        #navbar {
+            margin: 0 auto;
+            ul {
+                list-style: none;
 
-            li {
-                float: left;
-                cursor: pointer;
-                padding: 0px 35px 0px 0;
+                li {
+                    float: left;
+                    cursor: pointer;
+                    padding: 0px 35px 0px 0;
+                }
             }
         }
     }
